--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Mesavip"/>
+  <meta property="og:image" content="/https://bit.ly/3f6cdB4"/>
+  <meta property="og:description" content="Mesavip"/>
+  <meta property="og:url" content="https://mesavip-web.herokuapp.com/" />
   <head>
     <title>MesaVIP</title>
   </head>
