--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Mesavip"/>
-  <meta property="og:image" content="/https://bit.ly/3f6cdB4"/>
+  <meta property="og:image" content="https://res.cloudinary.com/du39ecvjf/image/upload/v1616871437/Mesavip/Main/logo_ifyju9.png"/>
   <meta property="og:description" content="Mesavip"/>
   <meta property="og:url" content="https://mesavip-web.herokuapp.com/" />
   <head>
