Html Open Graph meta tags changes, hopefully it will work now on Linkedin

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Mesavip"/>
-  <meta property="og:image" content="https://res.cloudinary.com/du39ecvjf/image/upload/v1616871437/Mesavip/Main/logo_ifyju9.png"/>
-  <meta property="og:description" content="Mesavip"/>
-  <meta property="og:url" content="https://mesavip-web.herokuapp.com/" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:url" content="https://mesavip.netlify.app" />
+  <meta property="og:site_name" content="Mesavip"/>
+  <meta property="og:title" content="Mesavip website"/>
+  <meta property="og:description" content="Mesavip is a reservation website, one of my portfolio projects"/>
+  <meta property="og:image" content="https://raw.githubusercontent.com/danielmarques12/mesavip-web/master/.github/logo.png"/>
+  <meta property="og:image:type" content="image/png"/>
+  <meta property="og:image:width" content="300"/>
+  <meta property="og:image:height" content="135"/>
   <head>
     <title>MesaVIP</title>
   </head>
